# gymnasie-arbete

./: Cargo.toml  README.md  index.html  three_body.wasm
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
python/: plot.ipynb  solenoid.py
src/: lib.rs  main.py  main.rs  positions.rs
three-body/: Cargo.toml
