[package]
name = "three_body"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
nalgebra = "0.32.3"
wgpu = "0.18"
winit = "0.29.4"
cfg-if = "1"
pollster = "0.3.0"


[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
